syntax = "proto3";
package happy.chat.common.protobuf;
option java_package = "happy.chat.common.protobuf.response";
option java_outer_classname = "ResponseBody";

message ResponseMsg {

  enum Command {

    SIGN_IN = 0;

    MESSAGE = 1;

    SIGN_OUT = 2;

    CREATE_GROUP = 3;

    LIST_GROUP_MEMBERS = 4;

    JOIN_GROUP = 5;

    QUIT_GROUP = 6;

    GROUP_MESSAGE = 7;

    HEARTBEAT = 8;
  }
  Command command = 1;

  oneof requestBody {
    SignIn signIn = 2;
    UserMessage userMessage = 3;
    SignOut signOut = 4;
    CreateGroup createGroup = 5;
    ListGroupMembers listGroupMembers = 6;
    JoinGroup joinGroup = 7;
    QuitGroup quitGroup = 8;
    GroupMessage groupMessage = 9;
    Heartbeat heartbeat = 10;
  }
}

message SignIn {
  string userId = 1;
  string username = 2;
  bool success = 3;
  string reason = 4;
}

message UserMessage {
  string fromUserId = 1;
  string fromUsername = 2;
  string message = 3;
}

message SignOut {
  bool success = 1;
  string reason = 2;
}

message CreateGroup {
  bool success = 1;
  string groupId = 2;
  repeated string usernameList = 3;
}

message ListGroupMembers {
  string groupId = 1;
  repeated UserInfo userInfo = 2;
}

message UserInfo {
  string userId = 1;
  string username = 2;
}


message JoinGroup {
  bool success = 1;
  string groupId = 2;
  string reason = 3;
}


message QuitGroup {
  bool success = 1;
  string groupId = 2;
  string reason = 3;
}

message GroupMessage {
  string fromGroupId = 1;
  UserInfo userInfo = 2;
  string message = 3;
}

message Heartbeat {

}